src/_theme/styles/home.css
/***********************************
************************************
L A Y O U T
************************************
- Page
- Title
- subject
- prep
- object-product
- object-design

************************************
************************************/
.html {
  height: 100%;
}

.page {
  margin: 0;

  min-height: 100%;
  
  display: -webkit-flex;  
  display: -ms-flexbox;
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-between;

  color: #345;
  font: 1rem/1.8 -apple-system, BlinkMacSystemFont, Ubuntu, 'Segoe UI', Roboto, Oxygen, Cantarell, 'Open Sans', 'Helvetica Neue', 'Trebuchet MS', sans-serif;
  background: rgb(253, 254, 255);
}

.page__title {
  margin: auto;
  transform: translateY(-2vmin);
}

.page__title-subject {
  text-indent: 1vmin;
  margin: 0 0 4vmin 0;
}

.page__title-prep {
  text-indent: 1.2vmin;
  margin: 2vmin 0 4vmin 0;
}

.page__title-object-product {
  animation: slideProduct 0.5s 2s;
}

.page__title-object-design {
  animation: slideDesign 0.5s 2s;
}


@keyframes slideProduct {
  0% {
    transform: translate(-200%);
  }

  23% {
    transform: translate(50%);
  }

  46% {
    transform: translate(-12%);
  }

  69% {
    transform: translate(3%);
  }

  92% {
    transform: translate(-1%);
  }

  100% {
    transform: translate(0);
  }
}

@keyframes slideDesign {
  0% {
    transform: translate(200%);
  }

  23% {
    transform: translate(-50%);
  }

  46% {
    transform: translate(12%);
  }

  69% {
    transform: translate(-3%);
  }

  92% {
    transform: translate(1%);
  }

  100% {
    transform: translate(0);
  }
}


/***********************************
************************************
S T R U C T U R E
************************************
- Title
  - subject
  - prep
  - object-product
  - object-design
- Info
  - info-project
- CTA-secondary

************************************
************************************/
.title {
  display: -webkit-flex;  
  display: -ms-flexbox;
  display: flex;
  flex-flow: column nowrap;
}

.title__subject {
  font: bold 1.2rem/1  sans-serif;
  font-family: inherit;

  position: relative;
}

/* .title__subject::before {
  content: "";
  display: block;
  width: 8px;
  height: 8px;
  background: #ff01aa;
  position: absolute;
  bottom: 4px;
  left: -0.75rem
} */

.title__prep {
  font: 0.875rem/1 sans-serif;
  font-family: inherit;
}

.title__object-product {
  font: normal 900 18vmin/1 -apple-system, BlinkMacSystemFont, Ubuntu, 'Segoe UI', Roboto, Oxygen, Cantarell, 'Open Sans', 'Helvetica Neue', 'Trebuchet MS', sans-serif;

  -webkit-text-stroke: 1px #ff01aa;
  -webkit-text-fill-color: transparent;

  position: relative;
}

.title__object-product:before {
  content: "P";
  position: absolute;
  bottom: 0;
  left: -8%;
  opacity: 0.1;
}

.title__object-product:after {
  content: "P";
  position: absolute;
  bottom: 0;
  left: -16%;
  opacity: 0.05;
}

.title__object-design {
  font: normal 900 18vmin/1 -apple-system, BlinkMacSystemFont, Ubuntu, 'Segoe UI', Roboto, Oxygen, Cantarell, 'Open Sans', 'Helvetica Neue', 'Trebuchet MS', sans-serif;
  color: #456;
}

.title__object-design_step {
  font-size: 8vmin;
  position: relative;
  /* left: -1.8vmin; */
}

.title__object-design_step:after {
  content: 't';
  opacity: 0.05;
  position: relative;
  left: -2vmin;
}

.info {
  /* padding: 3vm 5vm;
  padding: 3vmin 5vmin; */
  padding: 1rem 1rem 1rem 1.5rem;
  
  display: -webkit-flex;  
  display: -ms-flexbox;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
}

.info__project {
  font: 1rem/1.5 sans-serif;
  font-family: inherit;
  margin: 0;
  padding: 0 1rem 0 0;
}

.cta-secondary {
  color: #ff01aa;
  font-weight: bold;
}


.signature_as-bg {
  position: absolute;
  z-index: -100;
  width: 100vmin;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
  opacity: 0.015;
}


.page__signature {
  height: 0;
  overflow: visible;
  align-self: flex-end;
  position: sticky;
  top: calc(100vh - 72px - 1rem);
  right: 1rem;
}

.signature {
  filter: drop-shadow(1px 1px 1px rgba(68,65, 102));
}

.signature__name,
.signature__spikes {
  fill: rgb(253, 254, 255);
}

.signature__flourish {
  stroke: rgb(253, 254, 255);
}

.bg-signature__flourish {
  stroke-dasharray: 70;
  stroke-dashoffset: 70;
  animation: dash 30s 5s linear alternate infinite;
}

.bg-signature__guide {
  stroke-dasharray: 15;
  stroke-dashoffset: 15;
  animation: dash 5s linear alternate infinite;
}

.bg-signature__guide_2 {
  animation-delay: 1s;
}
.bg-signature__guide_3 {
  animation-delay: 2s;
}
.bg-signature__guide_4 {
  animation-delay: 3s;
}
.bg-signature__guide_5 {
  animation-delay: 4s;
}
.bg-signature__guide_6 {
  animation-delay: 5s;
}

@keyframes dash {
  to {
    stroke-dashoffset: 0;
  }
}


:root {
  --int: 1.5;
  --scale0: 1rem;
  --scale-1: calc(var(--scale0) / var(--int));
  --scale-2: calc(var(--scale-1) / var(--int));
  --scale1: calc(var(--scale0) * var(--int));
  --scale2: calc(var(--scale1) * var(--int));
  --scale3: calc(var(--scale2) * var(--int));
  --scale4: calc(var(--scale3) * var(--int));
  --scale5: calc(var(--scale4) * var(--int));
  --scale6: calc(var(--scale5) * var(--int));
}


.breadcrumb-list {
  display: flex;
  list-style: none;
  margin: 0 0 3rem 0;
  padding: 0.5rem 0;

  position: sticky;
  top: 0;
  background-color: rgb(253, 254, 255);
}

.breadcrumb-list__item {
  display: inline-flex;
  border-bottom: 1px solid rgba(200, 220, 242,0.2);
  padding: 0.4rem 0;
}

.breadcrumb-list__item:after {
  content: '\000bb';
  padding: 0 0.4rem;
  color: #cce;
  font-family: serif;

  position: relative;
  top: 1px;
}

.breadcrumb-list__item:last-child {
  color: #668;

  position: relative;
  padding-right: 0.5rem;
}

.breadcrumb-list__item:last-child:after {
  content: '\02935';
  /* border-bottom:1px solid red; */
  
  position: absolute;
  top: 0.8em;
  right: -1rem;
}

.breadcrumb-list__link {
  text-decoration: none;
}




.single-page {
  width: 100%;
  max-width: 540px;
  padding: 1.5rem;
  box-sizing: border-box;
  margin: 5rem auto;
}

.heroicon {
  vertical-align: middle;
}

.blog h1, 
.h1 {
  margin: 0 auto 2rem;
  line-height: 1.3;
  font-weight: 900;
  font-size: var(--scale3);
}

.blog h2 {
  margin: 3rem auto 1rem;
  font-size: var(--scale2);
  line-height: 1.4;
}

.blog h3 {
  margin: 3rem auto 1rem;
  font-size: var(--scale1);
  line-height: 1.4;
}

.blog p, 
.blog ul,
.blog ol,
.blog dl {
  margin: 0 auto 1.5rem;
}

.blog-nav {
  display: flex;
  justify-content: space-between;
  padding: 1.5rem 3rem;
  align-items: start;
}

.blog-nav__link {
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 0.12rem;
}

.blog-footer {
  display: flex;
}


.social-menu-list {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  flex-flow: column nowrap;
  position: absolute;
  right: 1.5rem;
  top: 1.5rem;
}

.social-menu-list__item {
  padding: 0.75rem;
  display: inline-flex;
}




.home-link {
  margin-bottom: 3rem;
  display: flex;
  align-items: center;
  font-size: 0.875rem;
  text-decoration: none;
  color: #668;
}

.home-link__icon {
  margin-right: 0.5rem;
}



.top-link {
  display: flex;
  margin: 0 auto 6rem;
  flex-flow: column nowrap;
  align-items: center;
  text-decoration: none;
}

.top-link__icon {
  vertical-align: middle;
  margin-bottom: 1rem;
}

.top-link:before {
  content: '\02191';
  font-size: var(--scale3);
  line-height: 1;
  font-family: serif;
  margin-bottom: 1rem;
}

.article-list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.article-list__icon {
  color: #cce;
  margin-right: 0.25rem;
}

.article-list__item-link {
  padding: 0.5rem 0;
  display: flex;
  align-items: center;
  text-decoration: none;
  color: #668;
}

.article-list__item-link:before {
  content: '\0203a';
  padding: 0 0.5rem 0 0.25rem;
  color: #cce;
  font-family: serif;
}

.article-list__item {
  border-top: 1px solid rgba(200, 220, 242,0.2);
}

.article-list__item:last-child {
  border-bottom: 1px solid rgba(200, 220, 242,0.2);
}


@media (min-width: 768px) {
  html .blog { font-size: 112.5% }
}

@media (min-width: 1024px) {
  .title__subject {
    font-size: var(--scale1);
  }
}


@media (min-width: 1920px) {

  /* 
   * Restrain the max width of the page 
   * By so doing, page scanning is easier for readability. 
   * Eyes can easily travel back to the beginning of the next content.
   * 
   */

  .page {
    max-width: 1920px;
    margin-left: auto;
    margin-right: auto;
  }


  /* 
   * Contraint variable font-size.
   *
   * If not, they become so big that others become too small.
   */

  .title__object-product,
  .title__object-design {
    font-size: var(--scale6);
  }

}

